# Geant4

./: CMakeLists.txt  CsIConstruction.cc  CsISD.cc  Geant4gammaspectrumhisto.py  InrUSource.mac  Run.cc  YourActionInitialization.cc  physics.cc  sim.cc  source.mac  spectra.mac  spectra_Cs137.mac  spectra_Pu239.mac  spectra_U235.mac  spectra_U238.mac
CsIDetectorCode/: Analysis.hh  CsIConstruction.hh  CsIEventAction.cc  CsIEventAction.hh  CsIHit.cc  CsIHit.hh  CsIPhysicsList.hh  CsISD.cc  CsISD.hh  MagneticField.hh  Run.hh  RunAction.cc  RunAction.hh  YourActionInitialization.hh  YourPrimaryGeneratorAction.cc  YourPrimaryGeneratorAction.hh  yourMainApplication.cc
include/: Hit.hh  MySensitiveDetector.hh  YourActionInitialization.hh  YourDetectorConstruction.hh  YourPrimaryGeneratorAction.hh  physics.hh
python/: README.txt  hist.py  macro.py
python/data/: README.txt  data_Cs137.txt  data_Pu239.txt  data_U235.txt  data_U238.txt
python/peaks/: README.txt  peaks_Cs137.txt  peaks_Pu239.txt  peaks_U235.txt  peaks_U238.txt
python/spectra/: README.txt
src/: MySensitiveDetector.cc  YourActionInitialization.cc  YourDetectorConstruction.cc  YourPrimaryGeneratorAction.cc  physics.cc
